--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/dempfi/slack-tz-bot#readme",
   "dependencies": {
     "@xene/slack": "^0.5.1",
+    "moment-timezone": "^0.5.23",
     "moment": "^2.19.1"
   },
   "devDependencies": {
